fixed small image stretching issue on product grid widget

--- a/src/css/view/product-grid.scss
+++ b/src/css/view/product-grid.scss
@@ -58,8 +58,9 @@
                     }
 
                     img {
-                        width: 100%;
+                        width: fit-content;
                         height: auto;
+                        margin: auto;
                         backface-visibility: hidden;
                     }
 
@@ -252,7 +253,7 @@
                     }
 
                     img {
-                        width: 100%;
+                        width: fit-content;
                         height: auto;
                         margin: 0;
                         backface-visibility: hidden;
